--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ethers": "^5.6.6",
     "hardhat": "^2.9.5",
     "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "^2.6.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
