--- a/frontNext/.eslintrc.json
+++ b/frontNext/.eslintrc.json
@@ -1,4 +1,7 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
+  "globals": {
+    "React": "readonly"
+  },
   "rules": { "react/no-unescaped-entities": 0 }
 }
